--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -312,7 +312,7 @@ img {
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
   display: block;
-  max-width: 100%;
+  max-width:100%;
   height: auto;
 }
 .img-rounded {
@@ -321,7 +321,7 @@ img {
 .img-thumbnail {
   display: inline-block;
   max-width: 100%;
-  height: auto;
+  height: 100%;
   padding: 4px;
   line-height: 1.42857143;
   background-color: #fff;
@@ -3936,7 +3936,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #ffffff;
+  background-color: #f8f8f8;
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
